volexc/tests/ui/parse_service_missing_index.out
Error: found '}' expected '='
   ╭─[ parse_service_missing_index.vol:8:1 ]
   │
 8 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: '='
───╯